--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @jakirkham @jjhelmus @mingwandroid @msarahan @ocefpaf @pelson @scopatz
+* @jakirkham @mingwandroid @msarahan @ocefpaf @pelson @scopatz
