--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @isuruf @jakirkham @jjhelmus @mingwandroid @msarahan @ocefpaf @pelson @scopatz
+* @isuruf @jakirkham @mingwandroid @msarahan @ocefpaf @pelson @scopatz
