--- a/.ci_support/osx_64_.yaml
+++ b/.ci_support/osx_64_.yaml
@@ -1,5 +1,7 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
+MACOSX_SDK_VERSION:
+- '11.0'
 bzip2:
 - '1'
 c_compiler:
@@ -43,7 +45,7 @@ pin_run_as_build:
 python:
 - '3.8'
 readline:
-- '8.0'
+- '8'
 sqlite:
 - '3'
 target_platform:
