--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,6 +6,9 @@
 {% set ver3nd = ''.join(version.split('.')[0:3]) %}
 {% set build_number = 1 %}
 
+# this makes the linter happy
+{% set channel_targets = channel_targets or ['conda-forge main'] %}
+
 # Sanitize build system env. var tweak parameters
 # (passed to the build scripts via script_env).
 {% set from_source_control = os.environ.get('CONDA_BUILD_FROM_SOURCE_CONTROL', '') %}
