--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -193,9 +193,6 @@ outputs:
         # configure script looks for llvm-ar for lto
         - llvm-tools  # [osx]
         - ld_impl_{{ target_platform }}  # [linux]
-{% if 'conda-forge' in channel_targets %}
-        - binutils_impl_{{ target_platform }}  # [linux]
-{% endif %}
       host:
         - bzip2  # [not win]
         - sqlite
@@ -206,9 +203,9 @@ outputs:
         - tk  # [not win]
         - ncurses  # [unix]
         - libffi   # [not (win or (osx and arm64))]
-        - ld_impl_{{ target_platform }}  # [linux]
+        - ld_impl_{{ target_platform }} >=2.36.1  # [linux]
       run:
-        - ld_impl_{{ target_platform }}  # [linux]
+        - ld_impl_{{ target_platform }} >=2.36.1  # [linux]
         - tzdata
 {% if 'conda-forge' in channel_targets %}
         - ncurses  # [unix]
