Add DSOs to missing_dso_whitelist

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -198,6 +198,15 @@ outputs:
         - '**/MSVCR80.dll'  # [win]
         # I have no idea why this is not in C:\Windows\System32\downlevel
         - '**/api-ms-win-core-path-l1-1-0.dll'  # [win]
+          # -=- libs that come from the sysroot.
+        - '$RPATH/libc.so.6'        # [linux64]
+        - '$RPATH/libcrypt.so.1'    # [linux64]
+        - '$RPATH/libdl.so.2'       # [linux64]
+        - '$RPATH/libm.so.6'        # [linux64]
+        - '$RPATH/libnsl.so.1'      # [linux64]
+        - '$RPATH/libpthread.so.0'  # [linux64]
+        - '$RPATH/librt.so.1'       # [linux64]
+        - '$RPATH/libutil.so.1'     # [linux64]
     requirements:
       build:
         - {{ compiler('c') }}
