fix cbc and rerender

--- a/.ci_support/win_64_.yaml
+++ b/.ci_support/win_64_.yaml
@@ -1,3 +1,5 @@
+bzip2:
+- '1'
 c_compiler:
 - vs2017
 channel_sources:
@@ -6,9 +8,15 @@ channel_targets:
 - conda-forge main
 cxx_compiler:
 - vs2017
+libffi:
+- '3.3'
 openssl:
 - 1.1.1
 pin_run_as_build:
+  bzip2:
+    max_pin: x
+  libffi:
+    max_pin: x.x
   openssl:
     max_pin: x.x.x
   python:
@@ -17,7 +25,7 @@ pin_run_as_build:
   sqlite:
     max_pin: x
 python:
-- '3.9'
+- '3.10'
 sqlite:
 - '3'
 target_platform:
