--- a/.ci_support/win_64_.yaml
+++ b/.ci_support/win_64_.yaml
@@ -24,9 +24,13 @@ pin_run_as_build:
     max_pin: x.x
   sqlite:
     max_pin: x
+  tk:
+    max_pin: x.x
 python:
 - '3.10'
 sqlite:
 - '3'
 target_platform:
 - win-64
+tk:
+- '8.6'
