--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,6 +8,9 @@
   {% set debug = "_d" ~ debug %}
 {% endif %}
 
+# this makes the linter happy
+{% set channel_targets = channel_targets or 'conda-forge main' %}
+
 package:
   name: python-split
   version: {{ version }}
