--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -109,7 +109,7 @@ source:
     folder: externals/nasm-2.11.06                                                   # [win]
     sha256: de3c87b26a80e789986d8e6950c6304175d3829afe9c6c7211eb7257266ab0ac         # [win]
   - url: https://github.com/python/cpython-bin-deps/archive/libffi.zip               # [win]
-    folder: externals/libffi                                                         # [win]
+    folder: externals/libffi-3.3.0                                                   # [win]
     sha256: 346978268569d63cecf668e031d56908019b4098cdad18729d1d5af495d34641         # [win]
 
 build:
