--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -191,6 +191,7 @@ outputs:
         - ncurses  # [unix]
         - libffi   # [not (osx and arm64)]
         - ld_impl_{{ target_platform }} >=2.36.1  # [linux]
+        - libuuid  # [unix]
       run:
         - ld_impl_{{ target_platform }} >=2.36.1  # [linux]
         - tzdata
