--- a/.ci_support/osx_arm64_.yaml
+++ b/.ci_support/osx_arm64_.yaml
@@ -7,13 +7,17 @@ c_compiler:
 c_compiler_version:
 - '11'
 channel_sources:
-- conda-forge/label/rust_dev,conda-forge
+- conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
 - '11'
+libffi:
+- '3.4'
+libuuid:
+- 2.32.1
 macos_machine:
 - arm64-apple-darwin20.0.0
 ncurses:
@@ -23,10 +27,12 @@ openssl:
 pin_run_as_build:
   bzip2:
     max_pin: x
+  libffi:
+    max_pin: x.x
+  libuuid:
+    max_pin: x
   ncurses:
     max_pin: x.x
-  openssl:
-    max_pin: x.x.x
   python:
     min_pin: x.x
     max_pin: x.x
