--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -159,7 +159,6 @@ outputs:
         - {{ compiler('cxx') }}
         - {{ cdt('xorg-x11-proto-devel') }}  # [linux]
         - {{ cdt('libx11-devel') }}  # [linux]
-        - {{ cdt('libuuid-devel') }}  # [linux and not (ppc64le or aarch64)]
         - make  # [not win]
         - libtool  # [unix]
         - pkg-config  # [not win]
@@ -180,7 +179,7 @@ outputs:
         - ncurses  # [unix]
         - libffi
         - ld_impl_{{ target_platform }} >=2.36.1  # [linux]
-        - libuuid  # [unix]
+        - libuuid  # [linux]
       run:
         - ld_impl_{{ target_platform }} >=2.36.1  # [linux]
         - tzdata
